<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clockwork53.taxcalculator.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Cost_Label_mainActivity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Current_Cost_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/Cost_Input_mainActivity_Hint"
        android:cursorVisible="false"
        android:inputType="number|numberDecimal"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="44dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/Tax_Label_mainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Current_Tax_Input"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/Tax_Input_mainActivity_Hint"
        android:inputType="number|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <Button
        android:id="@+id/Add_Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:onClick="onAddClick"
        android:text="@string/Add_Cost_Button_mainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/Total_Cost_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Add_Cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/Add_Cost" />

    <TextView
        android:id="@+id/Total_Cost_View_wTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Clear_All"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Clear_All"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClearAllClick"
        android:text="@string/Clear_All_Button_mainActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Total_Cost_View_wTax"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_Cost"
        app:layout_constraintVertical_bias="0.298" />
</android.support.constraint.ConstraintLayout>
